Fix for viewport being a little too high

--- a/app/components/_main/main.component.css
+++ b/app/components/_main/main.component.css
@@ -14,6 +14,7 @@
 .main-container {
   display:flex;
   flex-direction:row;
+  position: relative;
   height:calc(100vh - 57px);
 }
 
